# tinystories_v2

./: .gitignore  2504.20605v2.md  CONTEXT.md  PROGRESS.md  pyproject.toml
.scratch/tinystories-v2-pipeline/: PRD.md
.scratch/tinystories-v2-pipeline/issues/: 01-walking-skeleton-data-tokenizer.md  02-model-pretraining-stage.md  03-sft-stage.md  04-judge-seam-preference-labeling.md  05-reward-model-gate.md  06-grpo-stage.md  07-evaluation-suite.md  08-dpo-fallback.md  09-architecture-ablation.md  10-judge-seam-and-pair-schema.md  (+2 more)
.superpowers/sdd/: final-fix-report.md
configs/: ablation_5m_learned_swiglu.toml  ablation_5m_report.toml  ablation_5m_rope_gelu.toml  ablation_5m_rope_swiglu.toml  data_prep_fixture.toml  data_prep_full.toml  dpo_fixture.toml  dpo_full.toml  eval_fixture.toml  eval_full.toml  grpo_fixture.toml  grpo_full.toml  judge_l4.toml  judge_t4.toml  pref_data_fixture.toml  pref_data_full.toml  pretrain_fixture.toml  pretrain_full.toml  reward_fixture.toml  reward_full.toml  sft_data_fixture.toml  sft_data_full.toml  sft_data_smoke.toml  sft_fixture.toml  sft_full.toml  sft_smoke.toml  tokenizer_fixture.toml  tokenizer_full.toml
docs/: DESIGN.md  colab-notes.md
docs/adr/: 0001-three-stage-pipeline.md  0002-llama-style-architecture.md  0003-custom-8k-bpe-tokenizer.md  0004-full-instructgpt-recipe.md  0005-hand-written-model-and-loops.md  0006-grpo-not-ppo.md
docs/schemas/: dpo-artifact-v1.md  eval-results-v1.md  grpo-artifact-v1.md  preference-pair-v1.md  reward-model-artifact-v1.md  sft-example-v1.md
notebooks/: dpo_colab.ipynb  eval_colab.ipynb  grpo_colab.ipynb  pref_data_colab.ipynb  pretrain_colab.ipynb  reward_colab.ipynb  sft_colab.ipynb
scripts/: dpo_colab.py  eval_colab.py  grpo_colab.py  make_fixture.py  reward_colab.py  sft_colab.py
src/tinystories_v2/: __init__.py  ablation.py  checkpoint.py  config.py  data.py  demo.py  dpo.py  eval.py  gate.py  generate.py  grpo.py  hub.py  hub_download.py  judge.py  metrics.py  model.py  pack.py  perplexity.py  pref_data.py  preferences.py  pretrain.py  reward.py  reward_model.py  sft.py  sft_data.py  slot_prompt.py  slots.py  tokenizer.py  tracking.py
tests/: conftest.py  test_ablation.py  test_ablation_configs.py  test_checkpoint.py  test_config.py  test_data_stage.py  test_demo.py  test_dpo_batch.py  test_dpo_colab.py  test_dpo_config.py  test_dpo_init.py  test_dpo_loss.py  test_dpo_resume.py  test_dpo_stage.py  test_eval_colab.py  test_eval_config.py  test_eval_generate.py  test_eval_metrics.py  test_eval_report.py  test_eval_resume.py  test_eval_stage.py  test_eval_winrate.py  test_generate.py  test_grpo_colab.py  test_grpo_config.py  test_grpo_init.py  test_grpo_loss.py  test_grpo_resume.py  test_grpo_reward.py  test_grpo_rollout.py  test_grpo_stage.py  test_hub_sync.py  test_judge.py  test_judge_config.py  test_judge_margin.py  test_metrics.py  test_model.py  test_model_hidden_states.py  test_notebook.py  test_pack.py  (+23 more)
tests/fixtures/: tf1_sample.jsonl
(+12 files in other folders)
