[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tinystories-v2"
version = "0.1.0"
description = "Fable LM trained from scratch with RLAIF (course project; see docs/DESIGN.md)"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "tokenizers>=0.19",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    # CPU-only, for the perplexity helper's toy-model tests (issue 11).
    # >=2.9 is the first release with Python 3.14 wheels (repo venv is 3.14).
    "torch>=2.9",
]
judge = [
    "torch>=2.3",
    "transformers>=4.51.0",
]

[project.scripts]
ts2-data-prep = "tinystories_v2.data:main"
ts2-tokenizer = "tinystories_v2.tokenizer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
