[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tinystories-v2"
version = "0.1.0"
description = "Fable LM trained from scratch with RLAIF (course project; see docs/DESIGN.md)"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "tokenizers>=0.19",
    "huggingface_hub>=0.23",
    "torch>=2.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
judge = [
    "torch>=2.3",
    "transformers>=4.51.0",
]
track = ["wandb>=0.17"]

[project.scripts]
ts2-data-prep = "tinystories_v2.data:main"
ts2-tokenizer = "tinystories_v2.tokenizer:main"
ts2-pretrain = "tinystories_v2.pretrain:main"
ts2-generate = "tinystories_v2.generate:main"
ts2-sft-data = "tinystories_v2.sft_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
